# ctrl_1

./: .gitignore  CMakeLists.txt  comandos
.github/workflows/: main.yml
log/: latest_list
simulator/: CMakeLists.txt
simulator/resources/core2-64/: run.flair  setup_x4.xml  simulator_x4.sh  simulator_x4.xml  simulator_x8.sh
uav/: CMakeLists.txt
uav/resources/armv5te/: ctrl1_minidrones.sh
uav/resources/armv7a-neon/: ctrl1_RL_ardrone2.sh  ctrl1_RL_ardrone2.xml  ctrl1_RL_bebop.sh  ctrl1_ardrone2.sh  ctrl1_bebop.sh  ctrl1_hdsx8.sh
uav/resources/core2-64/: setup_x4.xml  x4.sh  x4_intelaero.sh  x8.sh
uav/src/: AC1.cpp  AC1.h  NMethods.cpp  NMethods.h  Sliding.cpp  Sliding.h  Sliding_force.cpp  Sliding_force.h  Sliding_pos.cpp  Sliding_pos.h  TargetEthJR3.cpp  TargetEthJR3.h  TargetJR3.cpp  TargetJR3.h  ctrl1.cpp  ctrl1.h  main.cpp
